创建post&获取post(弥补)
